# RustWeb

./: .env  Cargo.toml  README.md
migrations/2020-07-01-181309_create_users/: down.sql  up.sql
migrations/2020-07-02-182555_create_articles/: up.sql
migrations/2020-07-14-162915_create_auth_info/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs  sorter.rs
templates/: index.hbs  user.hbs
